--- a/paginas/login.html
+++ b/paginas/login.html
@@ -16,7 +16,7 @@
         <header>
             <nav id="menu">
                 <ul>
-                    <a href="../index.html"><img src="../imagens/studio_life1.png" alt="Logo studio"></a>
+                    <a href="../index.html"><img src="../imagens/logo.png" alt="Logo studio"></a>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../paginas/multimidia.html">Fotos/Vídeos</a></li>
                         <li><a href="../paginas/login.html">Login</a></li>
