--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
 <nav id="menu">
 	<ul>
-	<a href="index.html"><img src="./imagens/studio_life1.png" alt="Logo studio"></a>
+	<a href="index.html"><img src="./imagens/logo.png" alt="Logo studio"></a>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="paginas/multimidia.html">Fotos/Vídeos</a></li>
 		<li><a href="paginas/login.html">Login</a></li>
@@ -21,15 +21,19 @@
 <main>
 <section id="corpo">
 <h1> O Life Studio</h1>
-<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat, voluptates eveniet. Dolore, nostrum ipsa fuga praesentium vel deleniti expedita earum tempore deserunt perspiciatis asperiores minima dolor delectus, in, optio accusantium.</p>
+	<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat, voluptates eveniet. Dolore, nostrum ipsa fuga praesentium vel deleniti expedita earum tempore deserunt perspiciatis asperiores minima dolor delectus, in, optio accusantium.</p>
+</section>
 
-<h1> O que é um personal trainer </h1>
-<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde exercitationem omnis maiores doloribus tempora eius numquam corrupti pariatur laudantium temporibus culpa qui quas laboriosam voluptatum deserunt, rem minima et dolores?</p>
+<section>
+	<h1> O que é um personal trainer </h1>
+	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde exercitationem omnis maiores doloribus tempora eius numquam corrupti pariatur laudantium temporibus culpa qui quas laboriosam voluptatum deserunt, rem minima et dolores?</p>
+</section>
 
-<h1>Como funciona</h1>
-<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos cumque maiores ipsam natus ducimus totam laudantium exercitationem iure voluptas nam, et asperiores ea, tempora deserunt, eligendi nesciunt aperiam ullam dicta.</p>
+<section>
+	<h1>Como funciona</h1>
+	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos cumque maiores ipsam natus ducimus totam laudantium exercitationem iure voluptas nam, et asperiores ea, tempora deserunt, eligendi nesciunt aperiam ullam dicta.</p>
+</section>
 
-[AQUI ENTRA UM VÍDEO]
 </article>
 </section>
 </main>
