--- a/index.html
+++ b/index.html
@@ -19,19 +19,27 @@
 </nav>	
 </header>
 <main>
-<section id="corpo">
+<section class="corpo">
 <h1> O Life Studio</h1>
-	<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat, voluptates eveniet. Dolore, nostrum ipsa fuga praesentium vel deleniti expedita earum tempore deserunt perspiciatis asperiores minima dolor delectus, in, optio accusantium.</p>
+	<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat, voluptates eveniet. Dolore, nostrum ipsa fuga praesentium vel deleniti expedita earum tempore deserunt perspiciatis asperiores minima dolor delectus, in, optio accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis obcaecati magnam fugit tempora reiciendis saepe sunt, adipisci autem sint exercitationem corporis quibusdam, similique ea fuga perferendis? Rerum quam velit debitis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ipsam quo illum voluptate repudiandae id explicabo expedita totam quae soluta deleniti ipsum commodi, velit mollitia vitae nulla excepturi doloremque error?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae architecto similique dolorum ullam inventore ducimus sequi minus ratione et nulla! Porro numquam, repudiandae eos odio ratione quia. Facilis, quia provident!Lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam asperiores magnam eligendi alias placeat aliquam beatae minus nam dignissimos. Quibusdam velit officia dolore debitis expedita harum nemo quasi aliquid alias! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero eum voluptates est molestias assumenda, praesentium dolorum voluptatem itaque? Aspernatur reiciendis ipsum voluptate quibusdam unde magni molestias veritatis, asperiores ad consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium reiciendis veritatis velit nulla vitae. Vel necessitatibus reprehenderit eaque ut dolorem, quam inventore perferendis nihil, sit, deleniti cum nulla rem corrupti.</p>
 </section>
 
-<section>
+<section class="imagem">
+	<p> <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>                                              </p>
+</section>
+
+<section class="corpo">
 	<h1> O que é um personal trainer </h1>
-	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde exercitationem omnis maiores doloribus tempora eius numquam corrupti pariatur laudantium temporibus culpa qui quas laboriosam voluptatum deserunt, rem minima et dolores?</p>
+	<p> Profissional capacitado que leva em conta o seu nível atual de condicionamento físico e define por meio de uma avaliação como você pode alcançar seus objetivos, seja emagrecer ou ter definição muscular.</p>
 </section>
 
-<section>
+<section class="imagem">
+	<p> <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>  <br>                                              </p>
+</section>
+
+<section class="corpo">
 	<h1>Como funciona</h1>
-	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos cumque maiores ipsam natus ducimus totam laudantium exercitationem iure voluptas nam, et asperiores ea, tempora deserunt, eligendi nesciunt aperiam ullam dicta.</p>
+	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos cumque maiores ipsam natus ducimus totam laudantium exercitationem iure voluptas nam, et asperiores ea, tempora deserunt, eligendi nesciunt aperiam ullam dicta.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat, voluptates eveniet. Dolore, nostrum ipsa fuga praesentium vel deleniti expedita earum tempore deserunt perspiciatis asperiores minima dolor delectus, in, optio accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis obcaecati magnam fugit tempora reiciendis saepe sunt, adipisci autem sint exercitationem corporis quibusdam, similique ea fuga perferendis? Rerum quam velit debitis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ipsam quo illum voluptate repudiandae id explicabo expedita totam quae soluta deleniti ipsum commodi, velit mollitia vitae nulla excepturi doloremque error?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae architecto similique dolorum ullam inventore ducimus sequi minus ratione et nulla! Porro numquam, repudiandae eos odio ratione quia. Facilis, quia provident!Lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam asperiores magnam eligendi alias placeat aliquam beatae minus nam dignissimos. Quibusdam velit officia dolore debitis expedita harum nemo quasi aliquid alias! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero eum voluptates est molestias assumenda, praesentium dolorum voluptatem itaque? Aspernatur reiciendis ipsum voluptate quibusdam unde magni molestias veritatis, asperiores ad consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium reiciendis veritatis velit nulla vitae. Vel necessitatibus reprehenderit eaque ut dolorem, quam inventore perferendis nihil, sit, deleniti cum nulla rem corrupti.</p>
 </section>
 
 </article>
